--- a/android-todo-list/architecture-samples-main/app/src/main/res/values/strings.xml
+++ b/android-todo-list/architecture-samples-main/app/src/main/res/values/strings.xml
@@ -68,5 +68,6 @@
     <!-- Content Descriptions -->
     <string name="tasks_header_image_content_description">Tasks header image</string>
     <string name="no_tasks_image_content_description">No tasks image</string>
+    <string name="not_applicable">NA</string>
 
 </resources>
