--- a/android-todo-list/architecture-samples-main/app/src/main/res/values/strings.xml
+++ b/android-todo-list/architecture-samples-main/app/src/main/res/values/strings.xml
@@ -73,5 +73,6 @@
     <string name="username">Username</string>
     <string name="login">Login</string>
     <string name="password">Password</string>
+    <string name="logout">Logout</string>
 
 </resources>
